--- a/game_invitation.html
+++ b/game_invitation.html
@@ -130,61 +130,64 @@
                         <div class="br_15px-s position-absolute bg-white fg_green-s px-5 shadow card_ticker-s">
                             <h3>pending</h3>
                         </div>
-                        <div class="heart_icon">
+                        
+                        <div class="card-img-top">
                             <i class="fa fa-heart" aria-hidden="true"></i>
                         </div>
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-xl-2 col-3">
-                                    <img src="assets/images/Group 24.png" alt="" />
-                                </div>
-                                <div class="col-xl-10 col-9 px-0">
-                                    <div class="row px-5">
-                                        <div class="col-xl-5 col-12 px-0">
-                                            <div class="text-white">
-                                                <h4>Thamer</h4>
-                                                <h5 class=" opacity_4-s">@thamermd</h5>
-                                                <p class="fg_yellow-s">
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i> 5.0
+                        <div class="card-body">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-xl-2 col-3">
+                                        <img src="assets/images/Group 24.png" alt="" />
+                                    </div>
+                                    <div class="col-xl-10 col-9 px-0">
+                                        <div class="row px-5">
+                                            <div class="col-xl-5 col-12 px-0">
+                                                <div class="text-white">
+                                                    <h4>Thamer</h4>
+                                                    <h5 class=" opacity_4-s">@thamermd</h5>
+                                                    <p class="fg_yellow-s">
+                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                        <i class="fa fa-star-o" aria-hidden="true"></i> 5.0
 
-                                                </p>
+                                                    </p>
+                                                </div>
                                             </div>
-                                        </div>
-                                        <div class="col-xl-7 col-12 px-0 d-flex justify-content-between">
-                                            <div class="">
-                                                <h4 class="text-white"> $10 </h4>
-                                                <h5 class="opacity_4-s text-white">Match Amount</h5>
-                                            </div>
-                                            <div class="text-right">
-                                                <h4 class="text-white">Defender</h4>
+                                            <div class="col-xl-7 col-12 px-0 d-flex justify-content-between">
+                                                <div class="">
+                                                    <h4 class="text-white"> $10 </h4>
+                                                    <h5 class="opacity_4-s text-white">Match Amount</h5>
+                                                </div>
+                                                <div class="text-right">
+                                                    <h4 class="text-white">Defender</h4>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <hr class="goalkeeper_margin_b" />
+                                <hr class="goalkeeper_margin_b" />
 
-                            <div class="aditya_location">
-                                <p class="mb-0 pb-0">
-                                    <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                    <span>Jaber Al-Ahmad International Stadium</span>
-                                </p>
-                                <span class="opacity_4-s">Sami Al-Ahmad Al Munayes St, Al Kuwayt, Kuwait</span>
-                            </div>
-
-                            <div class="row py-4">
-                                <div class="col-6 pr-2">
-                                    <button type="button" class="btn bg_grey-s br_10px-s fg_green-s py-3 w-100"><strong>DECLINE</strong></button>
+                                <div class="aditya_location">
+                                    <p class="mb-0 pb-0">
+                                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                        <span>Jaber Al-Ahmad International Stadium</span>
+                                    </p>
+                                    <span class="opacity_4-s">Sami Al-Ahmad Al Munayes St, Al Kuwayt, Kuwait</span>
                                 </div>
-                                <!--CANCEL button end-->
 
-                                <!--SUBMIT button-->
-                                <div class="col-6 pl-2">
-                                    <button type="submit" class="btn bg-white br_10px-s py-3 fg_green-s w-100"><strong>ACCEPT</strong></button>
+                                <div class="row py-4">
+                                    <div class="col-6 pr-2">
+                                        <button type="button" class="btn bg_grey-s br_10px-s fg_green-s py-3 w-100"><strong>DECLINE</strong></button>
+                                    </div>
+                                    <!--CANCEL button end-->
+
+                                    <!--SUBMIT button-->
+                                    <div class="col-6 pl-2">
+                                        <button type="submit" class="btn bg-white br_10px-s py-3 fg_green-s w-100"><strong>ACCEPT</strong></button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
