--- a/rating_player.html
+++ b/rating_player.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,11 +13,14 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <title>Rating Player</title>
 </head>
+
 <body class="bg_img-s">
-    <div class="container-fluid">
+    <div class="container-fluid px-0">
         <div class="row pt-4">
             <div class="col-lg-6 col-md-8 order-md-1 order-2 mt-md-0 mt-3 d-flex ">
-                <h4 class="pr-2">Game Invitations</h4>
+                <a class="td_none-s" href="game_invitation.html">
+                    <h4 class="pr-2 text-dark">More</h4>
+                </a>
                 <h4 class="px-2"><strong>/</strong></h4>
                 <h4 class="fg_green-s pl-2">Rating Player</h4>
             </div>
@@ -98,10 +102,10 @@
                             <div class="col-lg-4 col-md-6 col-12 mt-2">
                                 <div class="d-flex justify-content-between">
                                     <h5><strong>ABILITY</strong></h5>
-                                    <h5 id="ability-d">3.5</h5>
+                                    <h5 class="ability-d">0</h5>
                                 </div>
                                 <div class="form-group rating_filed-s border">
-                                    <input type="range" min="1.0" max="5.0" value="3.5" class="form-control-range py-4 ratig_slider-s mx-auto" id="">
+                                    <input type="range" min="0.0" max="5.0" step="0.1" value="0" id="rating" class="form-control-range py-4 ratig_slider-s mx-auto slider-d" data-parent='ability-d'>
                                 </div>
                             </div>
                             <!--ability rating end-->
@@ -110,10 +114,10 @@
                             <div class="col-lg-4 col-md-6 col-12 mt-2">
                                 <div class="d-flex justify-content-between">
                                     <h5><strong>STAMINA</strong></h5>
-                                    <h5 id="ability-d">3.5</h5>
+                                    <h5 id="ability-d" class="stamina-d">0</h5>
                                 </div>
                                 <div class="form-group rating_filed-s border">
-                                    <input type="range" min="1.0" max="5.0" value="3.5" class="form-control-range py-4 ratig_slider-s mx-auto" id="">
+                                    <input type="range" min="0.0" max="5.0" value="0" step="0.1" class="form-control-range py-4 ratig_slider-s mx-auto slider-d" data-parent='stamina-d'>
                                 </div>
                             </div>
                             <!--stamina rating end-->
@@ -122,10 +126,10 @@
                             <div class="col-lg-4 col-md-6 col-12 mt-2">
                                 <div class="d-flex justify-content-between">
                                     <h5><strong>STRENGTH</strong></h5>
-                                    <h5 id="ability-d">3.5</h5>
+                                    <h5 class="strength-d">0</h5>
                                 </div>
                                 <div class="form-group rating_filed-s border">
-                                    <input type="range" min="1.0" max="5.0" value="3.5" class="form-control-range py-4 ratig_slider-s mx-auto" id="">
+                                    <input type="range" min="0.0" max="5.0" value="0" step="0.1" class="form-control-range py-4 ratig_slider-s mx-auto slider-d" id="" data-parent="strength-d">
                                 </div>
                             </div>
                             <!--strength rating end-->
@@ -134,10 +138,10 @@
                             <div class="col-lg-4 col-md-6 col-12 mt-2">
                                 <div class="d-flex justify-content-between">
                                     <h5><strong>PASSES</strong></h5>
-                                    <h5 id="ability-d">3.5</h5>
+                                    <h5 class="passes-d">0</h5>
                                 </div>
                                 <div class="form-group rating_filed-s border">
-                                    <input type="range" min="1.0" max="5.0" value="3.5" class="form-control-range py-4 ratig_slider-s mx-auto" id="">
+                                    <input type="range" min="0.0" max="5.0" value="0" step="0.1" class="form-control-range py-4 ratig_slider-s mx-auto slider-d" id="" data-parent="passes-d">
                                 </div>
                             </div>
                             <!--passes rating end-->
@@ -146,10 +150,10 @@
                             <div class="col-lg-4 col-md-6 col-12 mt-2">
                                 <div class="d-flex justify-content-between">
                                     <h5><strong>SHOOTS</strong></h5>
-                                    <h5 id="ability-d">3.5</h5>
+                                    <h5 class="shoots-d">0</h5>
                                 </div>
                                 <div class="form-group rating_filed-s border">
-                                    <input type="range" min="1.0" max="5.0" value="3.5" class="form-control-range py-4 ratig_slider-s mx-auto" id="">
+                                    <input type="range" min="0.0" max="5.0" value="0" step="0.1" class="form-control-range py-4 ratig_slider-s mx-auto slider-d" id="" data-parent="shoots-d">
                                 </div>
                             </div>
                             <!--shoots rating end-->
@@ -158,10 +162,10 @@
                             <div class="col-lg-4 col-md-6 col-12 mt-2">
                                 <div class="d-flex justify-content-between">
                                     <h5><strong>APPEARANCE</strong></h5>
-                                    <h5 id="ability-d">3.5</h5>
+                                    <h5 class="appearance-d">0</h5>
                                 </div>
                                 <div class="form-group rating_filed-s border">
-                                    <input type="range" min="1.0" max="5.0" value="3.5" class="form-control-range py-4 ratig_slider-s mx-auto" id="">
+                                    <input type="range" min="0.0" max="5.0" value="0" step="0.1" class="form-control-range py-4 ratig_slider-s mx-auto slider-d" id="" data-parent="appearance-d">
                                 </div>
                             </div>
                             <!--appearance rating end-->
@@ -170,10 +174,10 @@
                             <div class="col-lg-4 col-md-6 col-12 mt-2">
                                 <div class="d-flex justify-content-between">
                                     <h5><strong>PACE</strong></h5>
-                                    <h5 id="ability-d">3.5</h5>
+                                    <h5 class="pace-d">0</h5>
                                 </div>
                                 <div class="form-group rating_filed-s border">
-                                    <input type="range" min="1.0" max="5.0" value="2.5" class="form-control-range py-4 ratig_slider-s mx-auto" id="">
+                                    <input type="range" min="0.0" max="5.0" value="0" step="0.1" class="form-control-range py-4 ratig_slider-s mx-auto slider-d" id="" data-parent="pace-d">
                                 </div>
                             </div>
                             <!--pace rating end-->
@@ -195,5 +199,10 @@
         </div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="assets/js/main.js"></script>
+
 </body>
+
 </html>
