--- a/Home/home.html
+++ b/Home/home.html
@@ -22,7 +22,7 @@
     <div class="container-fluid px-0 mx-0 ">
         <!-- .................Home Page NavBar Start ......................... -->
 
-        <nav class="navbar navbar-expand-md navbar-light pt-5 pb-3">
+        <nav class="navbar navbar-expand-lg navbar-light pt-3 pb-3">
             <div class="container-fluid px-0">
                 <div class="row w-100">
                     <div class="col-xl-8 col-lg-8 col-md-8 col-2">
@@ -30,7 +30,7 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                            <ul class="navbar-nav mt-2 mt-lg-0 w-100 justify-content-around">
                                 <li class="nav-item ml-2">
                                     <a class="nav-link" href="#">
                                         <span><img src="../assets/images/home.svg" class="img-fluid" alt="navbar_home"/></span> Home <span class="sr-only">(current)</span>
@@ -63,12 +63,12 @@
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-10 pt-2 text-right">
                         <div class="">
-                            <a>
+                            <a class="pr-3">
                                 <img src="../assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
                                 <span> Adailiya </span>
                             </a>
-                            <img src="../assets/images/Group 24.png" class="img-fluid nav_profile" alt="Navbar_profile" />
-                            <img src="../assets/images/notification.svg" class="img-fluid nav_notification_img" alt="navbar_home" />
+                            <img src="../assets/images/user_img.png" class="img-fluid rounded-circle border_green-s" width="37" alt="Navbar_profile" />
+                            <img src="../assets/images/notification.svg" class="ml-3 img-fluid nav_notification_img" alt="navbar_home" />
                         </div>
                     </div>
                 </div>
@@ -80,27 +80,29 @@
         <div class="container-fluid">
             <div class="row py-3">
                 <div class="col-5 pt-4">
-                    <h1 class="ft_3rem-s">Hallo, Ahmad</h1>
-                    <p class="ft_2rem-s">Find a player for your team.</p>
-                    <h2 class="fg_green-s">Thursday, 24 December 2020</h2>
+                    <h3 class="">Hallo, Ahmad</h3>
+                    <p class="">Find a player for your team.</p>
+                    <h4 class="fg_green-s">Thursday, 24 December 2020</h4>
                 </div>
-                <div class="col-7">
-                    <div class="card card_slider">
-                        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                            <ol class="carousel-indicators">
-                                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                            </ol>
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img class="d-block img-fluid" src="../assets/images/Image 2.png" alt="First slide" />
-                                </div>
-                                <div class="carousel-item">
-                                    <img class="d-block img-fluid" src="../assets/images/Image 2.png" alt="Second slide" />
-                                </div>
-                                <div class="carousel-item">
-                                    <img class="d-block img-fluid" src="../assets/images/Image 2.png" alt="Third slide" />
+                <div class="col-xl-5 col-lg-5 col-md-5 offset-xl-2 offset-lg-2 offset-md-1">
+                    <div class="w_500px-s">
+                        <div class="card card_slider">
+                            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img class="d-block img-fluid" src="../assets/images/Image 2.png" alt="First slide" />
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="d-block img-fluid" src="../assets/images/Image 2.png" alt="Second slide" />
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="d-block img-fluid" src="../assets/images/Image 2.png" alt="Third slide" />
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -112,7 +114,7 @@
 
         <!-- .................Home Page Button Group Section End ......................... -->
 
-        <div class="btn_grp pt-5 mt-3 d-flex justify-content-between pb-0 mx-5 mb_25px-s">
+        <div class="btn_grp pt-5 mt-3 d-md-flex justify-content-between pb-0 mx-5 mb_25px-s">
             <button class="btn btn-lg">All positions</button>
             <button class="btn btn-lg">All positions</button>
             <button class="btn btn-lg">All positions</button>
