--- a/chat.html
+++ b/chat.html
@@ -78,12 +78,12 @@
 
         <!-- -------heading container - start -->
         <div class="container-fluid">
-            <div class="row py-3">
+            <!-- <div class="row py-3">
                 <div class="col-12">
                     <h1 class="ft_3rem-s">Chat</h1>
                     <p class="ft_2rem-s">Send messages to other players.</p>
                 </div>
-            </div>
+            </div> -->
         </div>
         <!-- ------heading container - end -->
 
@@ -102,7 +102,7 @@
                                 </div>
                             </div>
 
-                            <div class="row d-flex justify-content-center">
+                            <div class="row d-flex justify-content-center h_450px-s">
                                 <div class="col-10 br_fg-s br_10px-s my-2">
                                     <div class="row border br_10px-s py-1 bg-greenish_grey-s">
                                         <div class="col-3 col-md-3 col-lg-3 col-xl-3 align-self-center">
@@ -239,6 +239,8 @@
                                     </div>
                                 </div>
                             </div>
+
+
                         </div>
                         <!-- ----- chat member list - end ----- -->
 
@@ -269,86 +271,90 @@
                             <!-- profile detail of next person in chat - end -->
 
                             <!-- chat room -start -->
-
-                            <!-- timeline of chat -->
                             <div class="row">
-                                <div class="col-12 d-flex justify-content-center ft_12px-s mt-3">
-                                    <span class=""> Today <span>01/01/21</span> </span>
-                                </div>
-                            </div>
-                            <!-- timeline of chat -->
+                                <div class="col h_450px-s">
 
-                            <!-- next person in chat -->
-
-                            <div class="row py-3">
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-1 px-0 px-lg-0 px-xl-0 px-md-0 align-self-end">
-                                    <div class="profile_img_in_chat-s ml-xl-5 ml-lg-3 ml-md-2 ml-2">
-                                        <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                    <!-- timeline of chat -->
+                                    <div class="row">
+                                        <div class="col-12 d-flex justify-content-center ft_12px-s mt-3">
+                                            <span class=""> Today <span>01/01/21</span> </span>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col-7 col-md-5 col-lg-6 col-xl-5 ml-md-0 ml-4 py-2 br_10x10-s ft_size_12px-s bg-greenish_grey-s word-break word-wrap">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
-                                    </p>
-                                </div>
-                                <div class="col-xl-8 col-lg-8 col-md-8 col-8 pl-0 offset-lg-1 offset-1 offset-xl-1 offset-md-1">
-                                    <span class="ft_12px-s ml-3 ml-lg-4 ml-xl-2"> 12:43 pm</span>
-                                </div>
-                            </div>
-                            <!-- next person in chat -->
+                                    <!-- timeline of chat -->
 
-                            <!-- first person in chat -->
+                                    <!-- next person in chat -->
 
-                            <div class="row py-3 justify-content-end">
-                                <div class="col-7 col-xl-5 col-lg-6 col-md-5 mr-2 py-2 br_10px10px-s ft_size_12px-s fg_white-s bg_green-s word-break word-wrap">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
-                                    </p>
-                                </div>
-                                <div class="col-1 mr-3 mr-lg-0 mr-xl-0 px-0 align-self-end">
-                                    <div class="profile_img_in_chat-s ml-md-2 ml-0">
-                                        <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                    <div class="row py-3">
+                                        <div class="col-xl-1 col-lg-1 col-md-1 col-1 px-0 px-lg-0 px-xl-0 px-md-0 align-self-end">
+                                            <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
+                                                <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="col-7 col-md-5 col-lg-6 col-xl-5 ml-md-0 ml-4 py-2 br_10x10-s ft_size_12px-s bg-greenish_grey-s word-break word-wrap">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
+                                            </p>
+                                        </div>
+                                        <div class="col-xl-8 col-lg-8 col-md-8 col-8 pl-0 offset-lg-1 offset-1 offset-xl-1 offset-md-1">
+                                            <span class="ft_12px-s ml-3 ml-lg-4 ml-xl-2"> 12:43 pm</span>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col-12 text-right">
-                                    <span class="ft_12px-s"> 12:43 pm</span>
-                                </div>
-                            </div>
-                            <!-- first person in chat -->
-                            <!-- next person in chat -->
+                                    <!-- next person in chat -->
 
-                            <div class="row py-3">
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-1 px-0 px-lg-0 px-xl-0 px-md-0 align-self-end">
-                                    <div class="profile_img_in_chat-s ml-xl-5 ml-lg-3 ml-md-2 ml-2">
-                                        <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                    <!-- first person in chat -->
+
+                                    <div class="row py-3 justify-content-end">
+                                        <div class="col-7 col-xl-5 col-lg-6 col-md-5 mr-2 py-2 br_10px10px-s ft_size_12px-s fg_white-s bg_green-s word-break word-wrap">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
+                                            </p>
+                                        </div>
+                                        <div class="col-1 mr-3 mr-lg-0 mr-xl-0 px-0 align-self-end">
+                                            <div class="profile_img_in_chat-s ml-md-2 ml-0">
+                                                <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="col-12 text-right">
+                                            <span class="ft_12px-s"> 12:43 pm</span>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col-7 col-md-5 col-lg-6 col-xl-5 ml-md-0 ml-4 py-2 br_10x10-s ft_size_12px-s bg-greenish_grey-s word-break word-wrap">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
-                                    </p>
-                                </div>
-                                <div class="col-xl-8 col-lg-8 col-md-8 col-8 pl-0 offset-lg-1 offset-1 offset-xl-1 offset-md-1">
-                                    <span class="ft_12px-s ml-3 ml-lg-4 ml-xl-2"> 12:43 pm</span>
-                                </div>
-                            </div>
-                            <!-- next person in chat -->
+                                    <!-- first person in chat -->
+                                    <!-- next person in chat -->
 
-                            <!-- first person in chat -->
-
-                            <div class="row py-3 justify-content-end">
-                                <div class="col-7 col-xl-5 col-lg-6 col-md-5 mr-2 py-2 br_10px10px-s ft_size_12px-s fg_white-s bg_green-s word-break word-wrap">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
-                                    </p>
-                                </div>
-                                <div class="col-1 mr-3 mr-lg-0 mr-xl-0 px-0 align-self-end">
-                                    <div class="profile_img_in_chat-s ml-md-2 ml-0">
-                                        <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                    <div class="row py-3">
+                                        <div class="col-xl-1 col-lg-1 col-md-1 col-1 px-0 px-lg-0 px-xl-0 px-md-0 align-self-end">
+                                            <div class="profile_img_in_chat-s ml-xl-4 ml-lg-3 ml-md-2 ml-2">
+                                                <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="col-7 col-md-5 col-lg-6 col-xl-5 ml-md-0 ml-4 py-2 br_10x10-s ft_size_12px-s bg-greenish_grey-s word-break word-wrap">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
+                                            </p>
+                                        </div>
+                                        <div class="col-xl-8 col-lg-8 col-md-8 col-8 pl-0 offset-lg-1 offset-1 offset-xl-1 offset-md-1">
+                                            <span class="ft_12px-s ml-3 ml-lg-4 ml-xl-2"> 12:43 pm</span>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col-12 text-right">
-                                    <span class="ft_12px-s"> 12:43 pm</span>
+                                    <!-- next person in chat -->
+
+                                    <!-- first person in chat -->
+
+                                    <div class="row py-3 justify-content-end">
+                                        <div class="col-7 col-xl-5 col-lg-6 col-md-5 mr-2 py-2 br_10px10px-s ft_size_12px-s fg_white-s bg_green-s word-break word-wrap">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
+                                            </p>
+                                        </div>
+                                        <div class="col-1 mr-3 mr-lg-0 mr-xl-0 px-0 align-self-end">
+                                            <div class="profile_img_in_chat-s ml-md-2 ml-0">
+                                                <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="col-12 text-right">
+                                            <span class="ft_12px-s"> 12:43 pm</span>
+                                        </div>
+                                    </div>
+                                    <!-- first person in chat -->
+                                    <!-- chat room - end -->
                                 </div>
                             </div>
-                            <!-- first person in chat -->
-
                             <!-- chat input - start -->
                             <div class="input-group word-break word-wrap my-4 shadow">
                                 <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control py-2 textarea_h_w-s ft_size_14px-s border-0" id="simple-chat-message"></textarea>
@@ -356,8 +362,6 @@
                                 <span class="input-group-text bg-white border-0 br_right_10px-s"><img class="" src="assets/images/chat_send_icon.svg" alt=""></span>
                             </div>
                             <!-- chat input - end -->
-                            <!-- chat room - end -->
-
                         </div>
                         <!-- ----- chat room - end ----- -->
                     </div>
