--- a/football_login1.html
+++ b/football_login1.html
@@ -32,7 +32,7 @@
                     </button>
 
                     <!--navbar menu-->
-                    <div class="collapse navbar-collapse h-100" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse navbar_collapse-s h-100" id="navbarSupportedContent">
                         <ul class="navbar-nav ">
                             <!--home-->
                             <li class="nav-item pr-xl-5 pl-xl-0 px-3">
